[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Łukasz Bacik <mail@luka.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
